# security-agent-platform

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: seed_cosmos.py
services/api/: main.py
services/api/routers/: demo.py  health.py
services/shared/: config.py  cosmos.py  telemetry.py
tests/: smoke_test.py
