[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[project]
name = "security-agent-platform"
version = "0.1.0"
description = "Agentic security assistant (LangGraph + CrewAI + MCP + RAG) – Azure-hosted, cloud-agnostic."
authors = [{ name = "Ravi Yadavilli", email = "ryadavillicloud@gmail.com" }]
requires-python = ">=3.12.4,<3.13"
readme = "README.md"

dependencies = [
  # ============ Core Web/Runtime ============
  "fastapi == 0.115.0",
  "uvicorn[standard] == 0.31.1",
  "pydantic >= 2.11.9, < 3.0.0",              # Updated for crewai compatibility
  "httpx == 0.28.1",
  "aiohttp >= 3.10.0, < 3.11.0",              # Updated for langchain-pinecone
  "redis == 5.0.3",
  "python-dotenv >= 1.1.1",                    # Updated for crewai

  # ============ OpenTelemetry (Observability) ============
  "opentelemetry-api == 1.38.0",
  "opentelemetry-sdk == 1.38.0",
  "opentelemetry-exporter-otlp-proto-http == 1.38.0",
  "opentelemetry-instrumentation-fastapi == 0.59b0",
  "opentelemetry-instrumentation-asgi == 0.59b0",
  "opentelemetry-semantic-conventions == 0.59b0",
  "azure-monitor-opentelemetry-exporter == 1.0.0b31",

  # ============ LLM SDKs ============
  "openai >= 1.70.0, < 2.0.0",                # Updated for instructor
  "tiktoken == 0.8.0",
  "litellm >= 1.74.0",                         # Updated for openai compatibility

  # ============ Agent Orchestration - LangChain Family ============
  "langchain-core == 0.3.29",
  "langchain == 0.3.13",
  "langchain-openai == 0.2.14",
  "langchain-community == 0.3.13",
  "langchain-text-splitters == 0.3.4",
  "langgraph == 0.2.58",
  "langgraph-checkpoint == 2.0.9",
  "langsmith == 0.2.11",

  # ============ Agent Orchestration - CrewAI ============
  "crewai == 0.203.1",

  # ============ MCP (Model Context Protocol) ============
  "mcp == 1.17.0",

  # ============ Structured Outputs ============
  "instructor == 1.11.3",

  # ============ Vector Stores & Embeddings ============
  "faiss-cpu == 1.9.0.post1",
  "pinecone == 5.4.2",
  "sentence-transformers == 3.3.1",
  "transformers == 4.47.1",

  # ============ Azure Integrations ============
  "azure-cosmos == 4.9.0",
  "azure-search-documents == 11.6.0",
  "azure-identity == 1.19.0",
  "azure-storage-blob == 12.24.0",

  # ============ Document Processing ============
  "pypdf == 5.1.0",
  "python-docx == 1.1.2",
  "markdown == 3.7",

  # ============ Reranking & Hybrid Search ============
  "flashrank == 0.2.9",
  "rank-bm25 == 0.2.2",

  # ============ Caching ============
  "diskcache == 5.6.3",

  # ============ MLOps & Experiment Tracking ============
  "mlflow == 2.19.0",
  "azure-ai-ml == 1.23.0",

  # ============ LangChain Vector Store Integrations ============
  "langchain-pinecone == 0.2.2",
]

[dependency-groups]
dev = [
    "black == 25.1.0",
    "ruff == 0.13.0",
    "bandit == 1.8.6",
    "pytest == 8.4.2",
    "pytest-asyncio == 0.24.0",
    "httpx == 0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"